--- a/install/view/template/common/footer.twig
+++ b/install/view/template/common/footer.twig
@@ -1,6 +1,6 @@
 <footer>
-  <div class="container">
+  {# <div class="container">
     <a href="http://opencart.ru" target="_blank">{{ text_project }}</a>
-  </div>
+  </div> #}
 </footer>
 </body></html>
