--- a/catalog/view/theme/default/template/checkout/cart.twig
+++ b/catalog/view/theme/default/template/checkout/cart.twig
@@ -110,8 +110,8 @@
         </div>
       </div>
       <div class="buttons clearfix">
-        <div class="pull-left"><a href="{{ continue }}" class="btn btn-default">{{ button_shopping }}</a></div>
-        <div class="pull-right"><a href="{{ checkout }}" class="btn btn-primary">{{ button_checkout }}</a></div>
+        {# <div class="pull-left"><a href="{{ continue }}" class="btn btn-default">{{ button_shopping }}</a></div>
+        <div class="pull-right"><a href="{{ checkout }}" class="btn btn-primary">{{ button_checkout }}</a></div> #}
       </div>
       {{ content_bottom }}</div>
     {{ column_right }}</div>
