--- a/catalog/view/theme/default/template/common/footer.twig
+++ b/catalog/view/theme/default/template/common/footer.twig
@@ -15,7 +15,7 @@
         <h5>{{ text_service }}</h5>
         <ul class="list-unstyled">
           <li><a href="{{ contact }}">{{ text_contact }}</a></li>
-          <li><a href="{{ return }}">{{ text_return }}</a></li>
+          {# <li><a href="{{ return }}">{{ text_return }}</a></li> #}
           <li><a href="{{ sitemap }}">{{ text_sitemap }}</a></li>
         </ul>
       </div>
@@ -23,12 +23,12 @@
         <h5>{{ text_extra }}</h5>
         <ul class="list-unstyled">
           <li><a href="{{ manufacturer }}">{{ text_manufacturer }}</a></li>
-          <li><a href="{{ voucher }}">{{ text_voucher }}</a></li>
+          {# <li><a href="{{ voucher }}">{{ text_voucher }}</a></li>
           <li><a href="{{ affiliate }}">{{ text_affiliate }}</a></li>
-          <li><a href="{{ special }}">{{ text_special }}</a></li>
+          <li><a href="{{ special }}">{{ text_special }}</a></li> #}
         </ul>
       </div>
-      <div class="col-sm-3">
+      {# <div class="col-sm-3">
         <h5>{{ text_account }}</h5>
         <ul class="list-unstyled">
           <li><a href="{{ account }}">{{ text_account }}</a></li>
@@ -36,7 +36,7 @@
           <li><a href="{{ wishlist }}">{{ text_wishlist }}</a></li>
           <li><a href="{{ newsletter }}">{{ text_newsletter }}</a></li>
         </ul>
-      </div>
+      </div> #}
     </div>
     <hr>
     <p>{{ powered }}</p>
