--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -629,7 +629,8 @@ h2.price {
 	}
 }
 .product-thumb .button-group button {
-	width: 60%;
+	/* width: 60%; */
+	width: 100%;
 	border: none;
 	display: inline-block;
 	float: left;
