--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -43,7 +43,7 @@
     {{ language }}
     <div id="top-links" class="nav pull-right">
       <ul class="list-inline">
-        <li><a href="{{ contact }}"><i class="fa fa-phone"></i></a> <span class="hidden-xs hidden-sm hidden-md">{{ telephone }}</span></li>
+        <li><a href="{{ contact }}"><i class="fa fa-phone"></i></a> <span class="hidden-sm hidden-md">{{ telephone }}</span></li>
         {# <li class="dropdown"><a href="{{ account }}" title="{{ text_account }}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_account }}</span> <span class="caret"></span></a> #}
           {# <ul class="dropdown-menu dropdown-menu-right">
             {% if logged %}
