--- a/system/storage/modification/catalog/view/theme/default/template/information/contact.twig
+++ b/system/storage/modification/catalog/view/theme/default/template/information/contact.twig
@@ -1,4 +1,5 @@
 {{ header }}
+{{ hyper_positions_top_content }}
 <div id="information-contact" class="container">
   <ul class="breadcrumb">
     {% for breadcrumb in breadcrumbs %}
